--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "axios": "^0.26.0",
+    "install": "^0.13.0",
+    "lodash": "^4.17.21",
+    "nom": "^0.0.3",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-paginate": "^8.1.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^4.5.5"
   }
 }
